--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Desktop Nav-->
   <nav>
     <div class="nav-wrapper black">
-      <a href="#!" class="brand-logo">Logo</a>
+      <a href="#!" class="brand-logo"><h4>IDU</h4><h4 class="logo">Ingeniería y Desarrollo Urbano</h4></a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger">      <i class="fa fa-bars" aria-hidden="true"></i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="home.html">Home</a></li>
@@ -58,17 +58,50 @@
     <div class="row container">
       <div class="col s12 m10 offset-m1 ">
         <h2>Servicios</h2>
-        <i class="fa fa-check-circle fa-2x" aria-hidden="true"></i><span>Consultoria </span>
+        <i class="fa fa-check-circle" aria-hidden="true"></i><span>Consultoria </span>
         <br>
-        <i class="fa fa-check-circle fa-2x" aria-hidden="true"></i><span>Diseño</span>
+        <i class="fa fa-check-circle" aria-hidden="true"></i><span>Diseño</span>
         <br>
-        <i class="fa fa-check-circle fa-2x" aria-hidden="true"></i><span>Presupuesto</span>
+        <i class="fa fa-check-circle" aria-hidden="true"></i><span>Control de costos</span>
         <br>
-        <i class="fa fa-check-circle fa-2x" aria-hidden="true"></i><span>Construcción</span>
+        <i class="fa fa-check-circle" aria-hidden="true"></i><span>Ejecución de obras</span>
+        <br>
+        <i class="fa fa-check-circle" aria-hidden="true"></i><span>Estimaciones de material</span>
+        <br>
+        <i class="fa fa-check-circle" aria-hidden="true"></i><span>Renta de maquinaria </span>
+        <br>
+        <i class="fa fa-check-circle" aria-hidden="true"></i><span>Renta de equipo para acarreo de materiales</span>
+        <br>
+        <i class="fa fa-check-circle" aria-hidden="true"></i><span>Administración de recursos</span>
+        <br>
+        <i class="fa fa-check-circle" aria-hidden="true"></i><span>Elaboración de presupuesto</span>
+        <br>
+        <i class="fa fa-check-circle" aria-hidden="true"></i><span>Ejecución de obras</span>
         <span>      </div>
     </div>
   </div>
-  <!-- Imágen3 -->
+  <!--Imágen3  -->
+  <div class="parallax-container">
+    <div class="parallax back2"><img src="assets/images/back6.jpg"></div>
+  </div>
+  <!-- Soluciones en  -->
+  <div class="section ">
+    <div class="row container">
+      <div class="col s12 m10 offset-m1 ">
+        <h2>Soluciones en</h2>
+        <i class="fa fa-dot-circle-o" aria-hidden="true"></i><span>Construcción de calles,avenidas, camellones, ciclopistas y red atarjea,  entre otros </span>
+        <br>
+        <i class="fa fa-dot-circle-o" aria-hidden="true"></i><span>Pavimentación </span>
+        <br>
+        <i class="fa fa-dot-circle-o" aria-hidden="true"></i><span>Bacheo </span>
+        <br>
+        <i class="fa fa-dot-circle-o" aria-hidden="true"></i><span>Drenaje</span>
+        <br>
+        <i class="fa fa-dot-circle-o" aria-hidden="true"></i><span>Edificación de: Casas, departamentos, escuelas, bibliotecas, centros recreativos y crematorios, entre otros</span>
+        <span>      </div>
+    </div>
+  </div>
+  <!-- Imágen4 -->
   <div class="parallax-container">
     <div class="parallax back5"><img src="assets/images/back4.jpg"></div>
   </div>
