--- a/index.html
+++ b/index.html
@@ -115,14 +115,11 @@
           <div class="col s12 m4">
             <div class="card">
               <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <span class="card-title">Card Title</span>
+                <img src="assets/images/calle2.jpeg" height="300px">
+                <span class="card-title">Panteón de Ciudad Nezahualcoyotl 2017-2018</span>
               </div>
               <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-              </div>
-              <div class="card-action">
-                <a href="#">This is a link</a>
+                <p>Trabajo de pavimentación en el estacionamiento municipal de Ciudad Nezahualcoyotl.</p>
               </div>
             </div>
           </div>
@@ -130,14 +127,11 @@
           <div class="col s12 m4">
             <div class="card">
               <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <span class="card-title">Card Title</span>
+                <img src="assets/images/calle6.jpg" height="300px">
+                <span class="card-title">Red atarjea en primera avenida, ciudad Nezahualcoyotl 2016</span>
               </div>
               <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-              </div>
-              <div class="card-action">
-                <a href="#">This is a link</a>
+                <p>Construcción de red atarjea en primera avenida entre calle 11 y 22, de la colonia el Sol, Nezahualcoyotl</p>
               </div>
             </div>
           </div>
@@ -145,14 +139,11 @@
           <div class="col s12 m4">
             <div class="card">
               <div class="card-image">
-                <img src="images/sample-1.jpg">
+                <img src="assets/images/calle10.jpg" height="300px">
                 <span class="card-title">Card Title</span>
               </div>
               <div class="card-content">
                 <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-              </div>
-              <div class="card-action">
-                <a href="#">This is a link</a>
               </div>
             </div>
           </div>
