--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
     </div>
   </div>
   <!--Imágen3  -->
-  <div class="parallax-container">
+  <!-- <div class="parallax-container">
     <div class="parallax back2"><img src="assets/images/back6.jpg"></div>
-  </div>
+  </div> -->
   <!-- Soluciones en  -->
   <div class="section ">
     <div class="row container">
@@ -102,9 +102,9 @@
     </div>
   </div>
   <!-- Imágen4 -->
-  <div class="parallax-container">
+  <!-- <div class="parallax-container">
     <div class="parallax back5"><img src="assets/images/back4.jpg"></div>
-  </div>
+  </div> -->
   <!-- Proyectos -->
   <div class="section ">
     <div class="row container">
@@ -127,7 +127,7 @@
           <div class="col s12 m4">
             <div class="card">
               <div class="card-image">
-                <img src="assets/images/calle6.jpg" height="300px">
+                <img src="assets/images/calle20.jpg" height="300px">
                 <span class="card-title">Red atarjea en primera avenida, ciudad Nezahualcoyotl 2016</span>
               </div>
               <div class="card-content">
